<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newgamebtn"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/player1TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/player2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/rollBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollbtn"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player1TV" />

    <Button
        android:id="@+id/rollBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rollbtn"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player2TV" />

    <TextView
        android:id="@+id/results1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:scrollbars = "vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/rollBtn1"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/results2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:scrollbars = "vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/rollBtn2"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/winnotifyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lastRollTV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/rollBtn1"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/rollBtn1"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/lastRollTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/rollBtn2"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/rollBtn2"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>