<resources>
    <string name="app_name">Bowling</string>
    <string name="newgamebtn">Start New Game</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="rollbtn">Roll!</string>
    <string name="initialscore">score: 0</string>
    <string name="win1">Player 1 has won the game!</string>
    <string name="win2">Player 2 has won the game!</string>
    <string name="draw">That is a draw!</string>
    <string name="lastScore">Last: %d</string>
    <string name="fullScore">Score: %d</string>

</resources>
